change package name to Restvo App
1.7.13 (3)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Restvo",
+  "name": "Restvo App",
   "version": "1.7.13",
   "author": "Restvo Inc.",
   "homepage": "https://app.restvo.com",
