--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "ngx-plyr": "^1.2.1",
     "ngx-quill": "7.3.2",
     "ngx-stripe": "7.4.3",
-    "plyr": "^3.5.6",
+    "plyr": "3.5.6",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
