--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/pwa": "^0.11.4",
-    "@angular/router": "^7.2.16",
-    "@angular/service-worker": "^7.2.16",
+    "@angular/common": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.900.7",
+    "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "@capacitor/android": "1.3.0",
     "@capacitor/cli": "1.3.0",
     "@capacitor/core": "1.3.0",
@@ -43,7 +42,7 @@
     "@ionic-native/sms": "^5.20.0",
     "@ionic-native/speech-recognition": "^5.20.0",
     "@ionic-native/splash-screen": "^5.20.0",
-    "@ionic/angular": "^4.11.10",
+    "@ionic/angular": "^5.0.5",
     "@ionic/pwa-elements": "^1.4.2",
     "@ionic/storage": "^2.0.1",
     "@types/hammerjs": "^2.0.36",
@@ -70,13 +69,13 @@
     "googleapis": "^41.0.1",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
-    "ionic-cache": "^3.1.3",
-    "ionicons": "^4.6.3",
-    "minimist": "^1.2.0",
+    "ionic-cache": "^4.1.0",
+    "ionicons": "^5.0.1",
+    "minimist": "^1.2.5",
     "moment": "^2.24.0",
     "ngx-autosize": "^1.7.2",
     "ngx-electron": "^2.2.0",
-    "ngx-pinch-zoom": "^1.2.5",
+    "ngx-pinch-zoom": "^2.3.4",
     "ngx-plyr": "^1.2.1",
     "ngx-quill": "7.3.2",
     "ngx-stripe": "7.4.3",
@@ -89,25 +88,25 @@
     "sw-toolbox": "^3.6.0",
     "underscore": "^1.9.2",
     "xml2js": "^0.4.23",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.11.4",
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular-devkit/core": "^7.3.8",
-    "@angular-devkit/schematics": "^7.3.8",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler": "^7.2.16",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
-    "@ionic/angular-toolkit": "^1.5.1",
-    "@ionic/lab": "1.0.11",
+    "@angular-devkit/architect": "~0.803.20",
+    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/core": "8.3.25",
+    "@angular-devkit/schematics": "8.3.25",
+    "@angular/cli": "8.3.25",
+    "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@ionic/angular-toolkit": "^2.2.0",
+    "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.3.32",
     "@types/node": "^10.17.14",
-    "acorn": "^6.4.0",
-    "codelyzer": "~4.5.0",
+    "acorn": "^6.4.1",
+    "codelyzer": "^5.0.0",
     "electron": "^3.1.13",
     "faker": "^4.1.0",
     "g": "^2.0.1",
@@ -122,7 +121,7 @@
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "3.1.6",
+    "typescript": "~3.4.3",
     "webdriver-manager": "^12.1.7"
   },
   "description": "An Ionic project",
