--- a/electron/package.json
+++ b/electron/package.json
@@ -1,8 +1,9 @@
 {
   "name": "Restvo",
-  "version": "1.6.27",
+  "version": "1.6.28",
   "description": "Connect with Mentors",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "electron:start": "electron ./",
     "pack": "electron-builder --dir",
@@ -30,15 +31,16 @@
   },
   "dependencies": {
     "@capacitor/electron": "^1.4.0",
+    "ajv": "^6.12.0",
     "electron-is-dev": "^1.1.0",
     "electron-log": "^1.3.0",
     "electron-push-receiver": "^2.1.3",
     "electron-updater": "^4.2.0",
-    "source-map-support": "^0.5.11"
+    "source-map-support": "^0.5.16"
   },
   "devDependencies": {
-    "electron": "^4.1.1",
-    "electron-builder": "^20.39.0"
+    "electron": "^4.2.12",
+    "electron-builder": "^20.44.4"
   },
   "keywords": [
     "capacitor",
