bug fix, improve css
1.8.0 (5)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Restvo",
+  "name": "restvo-app",
   "version": "1.8.0",
   "author": "Restvo Inc.",
   "homepage": "https://app.restvo.com",
