--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/hammerjs": "^2.0.36",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.11.0",
+    "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
     "capacitor-jitsi-meet": "^1.3.6",
