--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/hammerjs": "^2.0.36",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.11.0",
+    "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
     "capacitor-jitsi-meet": "^1.3.6",
@@ -80,6 +81,7 @@
     "ngx-plyr": "^1.2.1",
     "ngx-quill": "7.3.2",
     "ngx-stripe": "7.4.3",
+    "node-sass": "^4.13.1",
     "plyr": "3.5.6",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
@@ -93,10 +95,10 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.11.4",
-    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular-devkit/build-angular": "^0.10.0",
     "@angular-devkit/core": "^7.3.8",
     "@angular-devkit/schematics": "^7.3.8",
-    "@angular/cli": "^7.3.8",
+    "@angular/cli": "7.3.9",
     "@angular/compiler": "^7.2.16",
     "@angular/compiler-cli": "^7.2.16",
     "@angular/language-service": "^7.2.16",
