--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Restvo",
-  "version": "1.6.28",
+  "name": "restvo-desktop",
+  "version": "1.7.3",
   "description": "Connect with Mentors",
   "main": "index.js",
   "private": true,
@@ -30,12 +30,12 @@
     ]
   },
   "dependencies": {
-    "@capacitor/electron": "^1.4.0",
+    "@capacitor/electron": "^1.5.1",
     "ajv": "^6.12.0",
     "electron-is-dev": "^1.1.0",
     "electron-log": "^1.3.0",
     "electron-push-receiver": "^2.1.3",
-    "electron-updater": "^4.2.0",
+    "electron-updater": "^4.2.5",
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
@@ -46,6 +46,6 @@
     "capacitor",
     "electron"
   ],
-  "author": "",
+  "author": "Calvin Ho",
   "license": "ISC"
 }
