--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.restvo.app",
-  "appName": "App",
+  "appId": "io.ionic.starter",
+  "appName": "front",
   "bundledWebRuntime": false,
   "webDir": "www",
   "ios": {
@@ -12,6 +12,19 @@
     },
     "Keyboard": {
       "resize": "ionic"
+    }
+  },
+  "npmClient": "npm",
+  "cordova": {
+    "preferences": {
+      "ScrollEnabled": "false",
+      "android-minSdkVersion": "19",
+      "BackupWebStorage": "none",
+      "SplashMaintainAspectRatio": "true",
+      "FadeSplashScreenDuration": "300",
+      "SplashShowOnlyFirstTime": "false",
+      "SplashScreen": "screen",
+      "SplashScreenDelay": "3000"
     }
   }
 }
