--- a/package.json
+++ b/package.json
@@ -76,10 +76,10 @@
     "ngx-autosize": "^1.7.2",
     "ngx-electron": "^2.2.0",
     "ngx-pinch-zoom": "^2.3.4",
-    "ngx-plyr": "^1.2.1",
+    "ngx-plyr": "^4.0.0",
     "ngx-quill": "7.3.2",
     "ngx-stripe": "7.4.3",
-    "plyr": "3.5.6",
+    "plyr": "^3.5.10",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
