addReferences() bug fix: cloned sample activities should not inherit parent_programs
1.8.12 (3)

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -94,6 +94,7 @@
 	<string>Use voice to input text into the chat box.</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>remote-notification</string>
 		<string>voip</string>
 	</array>
