--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "restvo-app",
-  "version": "1.8.0",
+  "version": "1.8.12",
   "author": "Restvo Inc.",
   "homepage": "https://app.restvo.com",
   "scripts": {
@@ -23,7 +23,6 @@
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
     "@capacitor/android": "1.5.2",
-    "@capacitor/cli": "1.5.2",
     "@capacitor/core": "1.5.2",
     "@capacitor/electron": "1.5.2",
     "@capacitor/ios": "1.5.2",
@@ -48,6 +47,7 @@
     "@types/hammerjs": "^2.0.36",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.11.0",
+    "angular": "^1.7.9",
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
@@ -74,6 +74,7 @@
     "ionicons": "^5.0.1",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
+    "natives": "^1.1.6",
     "ngx-autosize": "^1.7.2",
     "ngx-electron": "^2.2.0",
     "ngx-pinch-zoom": "^2.3.4",
@@ -93,14 +94,16 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.803.20",
-    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular-devkit/core": "8.3.25",
     "@angular-devkit/schematics": "8.3.25",
     "@angular/cli": "8.3.25",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@capacitor/cli": "1.5.2",
     "@ionic/angular-toolkit": "^2.2.0",
+    "@ionic/app-scripts": "^3.2.4",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
