--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "1.5.2",
+    "@capacitor/cli": "^1.5.2",
     "@ionic/angular-toolkit": "^2.2.0",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.16",
