--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/pwa": "^0.900.7",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
-    "@capacitor/android": "1.5.2",
-    "@capacitor/core": "1.5.2",
-    "@capacitor/electron": "1.5.2",
-    "@capacitor/ios": "1.5.2",
+    "@capacitor/android": "^2.2.0",
+    "@capacitor/core": "^2.2.0",
+    "@capacitor/electron": "^2.2.0",
+    "@capacitor/ios": "^2.2.0",
     "@ionic-native/app-version": "^5.20.0",
     "@ionic-native/badge": "^5.20.0",
     "@ionic-native/calendar": "^5.20.0",
@@ -50,7 +50,7 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "^1.3.6",
+    "capacitor-jitsi-meet": "^1.3.8",
     "capacitor-share-extension": "0.0.16",
     "compressorjs": "^1.0.6",
     "cordova-plugin-app-version": "^0.1.9",
@@ -99,7 +99,7 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "^1.5.2",
+    "@capacitor/cli": "^2.2.0",
     "@ionic/angular-toolkit": "^2.2.0",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.16",
