--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-sms-plugin": "^1.0.0",
     "core-js": "^2.6.11",
+    "electron-push-receiver": "^2.1.3",
     "es6-promise-plugin": "^4.2.2",
     "fix-orientation-capacitor": "^0.1.1",
     "googleapis": "^41.0.1",
