downgrade electron to 8.4.0 to resolve cannot find resource error on startup
1.8.15 (1)

--- a/electron/package.json
+++ b/electron/package.json
@@ -40,7 +40,7 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
-    "electron": "^9.1.0",
+    "electron": "8.4.0",
     "electron-builder": "^22.7.0"
   },
   "keywords": [
