--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://app.restvo.com",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4201",
     "dev": "ng build; npx cap copy",
     "build": "ng build --prod; npx cap copy",
     "test": "ng test",
