--- a/electron/package.json
+++ b/electron/package.json
@@ -1,15 +1,38 @@
 {
   "name": "Restvo",
-  "version": "1.7.26",
+  "version": "1.7.27",
   "description": "Connect with Mentors",
-  "main": "index.js",
   "private": true,
+  "main": "./build/index.js",
   "scripts": {
-    "electron:start": "electron ./",
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder -mw --x64 --ia32",
-    "publish": "electron-builder -mw --x64 --ia32 -p always"
+    "build": "tsc",
+    "electron:start": "npm run build && electron ./",
+    "electron:pack": "npm run build && electron-builder build --dir",
+    "electron:build-windows": "npm run build && electron-builder build --windows",
+    "electron:build-mac": "npm run build && electron-builder build --mac",
+    "dist": "npm run build && electron-builder -mw --x64 --ia32",
+    "publish": "npm run build && electron-builder -mw --x64 --ia32 -p always"
   },
+  "dependencies": {
+    "@capacitor-community/electron-core": "^1.0.0",
+    "ajv": "^6.12.3",
+    "electron-is-dev": "^1.2.0",
+    "electron-log": "^1.3.0",
+    "electron-push-receiver": "^2.1.3",
+    "electron-updater": "^4.3.4",
+    "source-map-support": "^0.5.19"
+  },
+  "devDependencies": {
+    "electron": "^9.1.1",
+    "electron-builder": "^22.7.0",
+    "typescript": "~3.9.5"
+  },
+  "keywords": [
+    "capacitor",
+    "electron"
+  ],
+  "author": "Calvin Ho",
+  "license": "MIT",
   "build": {
     "appId": "com.restvo.electron",
     "productName": "Restvo",
@@ -17,10 +40,13 @@
     "copyright": "Copyright © 2020 Restvo Inc.",
     "mac": {
       "category": "Social Networking",
-      "darkModeSupport": true
+      "darkModeSupport": true,
+      "target": "dmg",
+      "icon": "appIcon.png"
     },
     "win": {
-      "target": "NSIS"
+      "target": "nsis",
+      "icon": "appIcon.ico"
     },
     "publish": [
       {
@@ -28,25 +54,14 @@
         "owner": "calvinckho",
         "repo": "restvoApp"
       }
+    ],
+    "files": [
+      "assets/*",
+      "build/index.js",
+      "preloader.js",
+      "plugins/*",
+      "capacitor.config.json",
+      "app/**"
     ]
-  },
-  "dependencies": {
-    "@capacitor/electron": "^2.2.1",
-    "ajv": "^6.12.3",
-    "electron-is-dev": "^1.2.0",
-    "electron-log": "^1.3.0",
-    "electron-push-receiver": "^2.1.3",
-    "electron-updater": "^4.3.1",
-    "source-map-support": "^0.5.19"
-  },
-  "devDependencies": {
-    "electron": "8.4.0",
-    "electron-builder": "^22.7.0"
-  },
-  "keywords": [
-    "capacitor",
-    "electron"
-  ],
-  "author": "Calvin Ho",
-  "license": "ISC"
+  }
 }
