--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/pwa": "^0.900.7",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
+    "@capacitor-community/electron": "^1.1.2",
     "@capacitor/android": "^2.4.0",
     "@capacitor/core": "^2.4.0",
-    "@capacitor/electron": "^2.4.0",
     "@capacitor/ios": "^2.4.0",
     "@ionic-native/app-version": "^5.27.0",
     "@ionic-native/badge": "^5.27.0",
@@ -43,7 +43,7 @@
     "@ionic-native/splash-screen": "^5.27.0",
     "@ionic/angular": "^5.3.1",
     "@ionic/pwa-elements": "^1.5.2",
-    "@ionic/storage": "^2.3.0",
+    "@ionic/storage": "^2.2.0",
     "@types/hammerjs": "^2.0.36",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.12.2",
