--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "8.x",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -44,6 +46,7 @@
     "@ionic/angular": "^5.3.1",
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "^2.2.0",
+    "@swimlane/ngx-charts": "^12.1.0",
     "@types/hammerjs": "^2.0.36",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.12.2",
@@ -64,6 +67,18 @@
     "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-sms-plugin": "^1.0.0",
     "core-js": "^2.6.11",
+    "d3": "^4.10.2",
+    "d3-array": "^1.2.1",
+    "d3-brush": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-force": "^1.1.0",
+    "d3-format": "^1.2.0",
+    "d3-hierarchy": "^1.1.5",
+    "d3-interpolate": "^1.1.5",
+    "d3-scale": "^1.0.6",
+    "d3-selection": "^1.1.0",
+    "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.1.0",
     "electron-push-receiver": "^2.1.3",
     "es6-promise-plugin": "^4.2.2",
     "fix-orientation-capacitor": "^0.1.1",
