--- a/ios/App/ShareExtension/ShareExtension.entitlements
+++ b/ios/App/ShareExtension/ShareExtension.entitlements
@@ -6,10 +6,14 @@
 	<array>
 		<string>applinks:app.restvo.com</string>
 	</array>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.restvo.app</string>
 	</array>
+	<key>com.apple.security.network.client</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)com.restvo.app</string>
