--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/pwa": "^0.900.7",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
-    "@capacitor-community/electron": "^1.1.2",
+    "@capacitor-community/electron": "^1.2.3",
     "@capacitor/android": "^2.4.0",
     "@capacitor/core": "^2.4.0",
     "@capacitor/ios": "^2.4.0",
@@ -45,15 +45,15 @@
     "@ionic-native/splash-screen": "^5.27.0",
     "@ionic/angular": "^5.3.1",
     "@ionic/pwa-elements": "^1.5.2",
-    "@ionic/storage": "^2.2.0",
+    "@ionic/storage": "2.2.0",
     "@swimlane/ngx-charts": "^12.1.0",
     "@types/hammerjs": "^2.0.36",
     "@types/scriptjs": "0.0.2",
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.3",
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "^1.3.13",
+    "capacitor-jitsi-meet": "^1.4.3",
     "capacitor-share-extension": "^0.0.17",
     "compressorjs": "^1.0.6",
     "cordova-plugin-app-version": "^0.1.9",
@@ -86,7 +86,7 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "ionic-cache": "^4.1.0",
-    "ionicons": "^5.1.0",
+    "ionicons": "^5.1.2",
     "jetifier": "^1.6.6",
     "minimist": "^1.2.5",
     "moment": "^2.27.0",
@@ -98,7 +98,7 @@
     "ngx-stripe": "7.4.3",
     "plyr": "^3.6.2",
     "quill": "^1.3.7",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.2",
     "scriptjs": "^2.5.9",
     "socket.io-client": "^2.3.0",
     "sw-toolbox": "^3.6.0",
@@ -107,8 +107,8 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.28",
-    "@angular-devkit/build-angular": "^0.803.28",
+    "@angular-devkit/architect": "^0.803.29",
+    "@angular-devkit/build-angular": "^0.803.29",
     "@angular-devkit/core": "8.3.25",
     "@angular-devkit/schematics": "8.3.25",
     "@angular/cli": "8.3.25",
@@ -120,17 +120,17 @@
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
-    "@types/jquery": "^3.5.0",
-    "@types/node": "^10.17.26",
+    "@types/jquery": "^3.5.1",
+    "@types/node": "^10.17.28",
     "acorn": "^6.4.1",
     "codelyzer": "^5.2.2",
-    "electron": "^9.1.0",
+    "electron": "^9.2.0",
     "faker": "^4.1.0",
     "g": "^2.0.1",
     "ionic-mocks": "^1.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.1",
