--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "10.22.0"
+  - "10.21.0"
 
 # Cache node_modules
 cache:
@@ -9,6 +9,8 @@ cache:
 
 addons:
   chrome: stable
+
+os: osx
 
 branches:
   only:
