--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ branches:
   only:
     - app-dev01
     - app-production
+    - journey-e2e-2
 
 before_script:
   - npm install -g @angular/cli@8.3.25
