--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ionic/angular": "^5.3.1",
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "2.2.0",
+    "@stripe/stripe-js": "^1.9.0",
     "@swimlane/ngx-charts": "^12.1.0",
     "@types/hammerjs": "^2.0.36",
     "@types/scriptjs": "0.0.2",
@@ -95,7 +96,7 @@
     "ngx-pinch-zoom": "^2.4.4",
     "ngx-plyr": "^4.0.0",
     "ngx-quill": "7.3.2",
-    "ngx-stripe": "7.4.3",
+    "ngx-stripe": "^8.2.0",
     "plyr": "^3.6.2",
     "quill": "^1.3.7",
     "rxjs": "^6.6.2",
@@ -116,7 +117,7 @@
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@capacitor/cli": "^2.4.0",
-    "@ionic/angular-toolkit": "^2.3.0",
+    "@ionic/angular-toolkit": "^2.3.1",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
