--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
     "capacitor-jitsi-meet": "^1.5.3",
-    "capacitor-share-extension": "^0.0.17",
+    "capacitor-share-extension": "0.0.18",
     "compressorjs": "^1.0.6",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-badge": "^0.8.8",
@@ -83,7 +83,6 @@
     "electron-push-receiver": "^2.1.3",
     "es6-promise-plugin": "^4.2.2",
     "fix-orientation-capacitor": "^0.1.1",
-    "googleapis": "^41.0.1",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "ionic-cache": "^4.1.0",
