--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "ng build --prod; npx cap copy",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e --webdriverUpdate=false"
   },
   "private": true,
   "dependencies": {
@@ -138,8 +138,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.3",
-    "webdriver-manager": "^12.1.7"
+    "typescript": "~3.4.3"
   },
   "description": "An Ionic project",
   "cordova": {
