1. put flag on e2e test to not update in package.json. 2. completed first two specs of logging in as Ted Ho

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "ng build --prod; npx cap copy",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e --webdriverUpdate=false"
   },
   "private": true,
   "dependencies": {
