--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ jobs:
       script: ng e2e --protractor-config='e2e/src/mobile/tab-navigate.conf.js'
     - name: "Add and Remove Friend"
       script: ng e2e --protractor-config='e2e/src/desktop/add-and-remove-restvo-friend.conf.js'
+    - name: "Create and Delete a Community"
+      script: ng e2e --protractor-config='e2e/src/desktop/create-delete-community.conf.js'
