--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Restvo",
-  "version": "1.7.40",
+  "name": "restvo-desktop",
+  "version": "1.7.41",
   "description": "Connect with Mentors",
   "private": true,
   "main": "./build/index.js",
