--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,11 @@
               },
               {
                 "glob": "**/*.svg",
+                "input": "src/assets/custom-ion-icons",
+                "output": "./svg"
+              },
+              {
+                "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
               },
