--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ jobs:
     - stage: test
       name: "Join Journey Test"
       script: ng e2e --protractor-config='e2e/src/desktop/journey.conf.js'
+    - name: "Add User to Group"
+      script: ng e2e --protractor-config='e2e/src/desktop/add-user-to-group.conf.js'
     - name: "Register New Account Test"
       script: ng e2e --protractor-config='e2e/src/desktop/register.conf.js'
     - name: "Tab Navigation Test"
