--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         google()
         jcenter()
         maven {
+            //url "file:/Users/pianokai/Sites/jitsi/jitsi-maven-repository-01"
             url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
         }
     }
