temporarily remove Create and Delete a Community e2e test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,9 @@ jobs:
       #- run:
       #    name: "Add and Remove Friend"
       #    command: npm run ci -- --protractor-config='e2e/src/desktop/add-and-remove-restvo-friend.conf.js'
-      - run:
-          name: "Create and Delete a Community"
-          command: npm run ci -- --protractor-config='e2e/src/desktop/create-delete-community.conf.js'
+      #- run:
+      #    name: "Create and Delete a Community"
+      #    command: npm run ci -- --protractor-config='e2e/src/desktop/create-delete-community.conf.js'
       - run:
           name: "Join Journey Test"
           command: npm run ci -- --protractor-config='e2e/src/desktop/journey.conf.js'
