--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Restvo",
-  "version": "1.7.44",
+  "version": "1.7.45",
   "description": "Connect with Mentors",
   "private": true,
   "main": "./build/index.js",
@@ -23,9 +23,9 @@
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
-    "electron": "^9.4.0",
+    "electron": "^9.4.3",
     "electron-builder": "^22.9.1",
-    "typescript": "~3.9.5"
+    "typescript": "^3.9.9"
   },
   "keywords": [
     "capacitor",
