--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "restvo-app",
-  "version": "1.9.3",
+  "version": "1.9.4",
   "author": "Restvo Inc.",
   "homepage": "https://app.restvo.com",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "dev": "ng build; npx cap copy",
-    "build": "ng build --prod; npx cap copy",
+    "build": "ng build --configuration production; npx cap copy",
     "test": "ng test",
     "lint": "ng lint",
     "ci": "ng e2e",
@@ -55,7 +55,7 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "^1.5.12",
+    "capacitor-jitsi-meet": "^1.5.13",
     "capacitor-share-extension": "0.0.18",
     "compressorjs": "^1.0.7",
     "cordova-plugin-app-version": "^0.1.12",
@@ -129,7 +129,7 @@
     "ionic-mocks": "^1.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.2.3",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.1",
