--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,9 @@ jobs:
       - run:
           name: "Tab Navigation Test"
           command: npm run ci -- --protractor-config='e2e/src/mobile/tab-navigate.conf.js'
-      - run:
-          name: "Add and Remove Friend"
-          command: npm run ci -- --protractor-config='e2e/src/desktop/add-and-remove-restvo-friend.conf.js'
+      # - run:
+      #    name: "Add and Remove Friend"
+      #    command: npm run ci -- --protractor-config='e2e/src/desktop/add-and-remove-restvo-friend.conf.js'
       - run:
           name: "Create and Delete a Community"
           command: npm run ci -- --protractor-config='e2e/src/desktop/create-delete-community.conf.js'
