--- a/package.json
+++ b/package.json
@@ -27,8 +27,18 @@
     "@angular/service-worker": "~8.2.14",
     "@capacitor-community/electron": "^1.3.3",
     "@capacitor/android": "^2.4.6",
-    "@capacitor/core": "^2.4.6",
+    "@capacitor/app": "^1.0.5",
+    "@capacitor/camera": "^1.1.2",
+    "@capacitor/clipboard": "^1.0.5",
+    "@capacitor/core": "^3.2.5",
     "@capacitor/ios": "^2.4.6",
+    "@capacitor/local-notifications": "^1.0.8",
+    "@capacitor/network": "^1.0.5",
+    "@capacitor/push-notifications": "^1.0.6",
+    "@capacitor/share": "^1.0.6",
+    "@capacitor/splash-screen": "^1.1.5",
+    "@capacitor/status-bar": "^1.0.5",
+    "@cyril-colin/capacitor3-jitsi-meet": "^1.0.0",
     "@ionic-native/app-version": "^5.31.1",
     "@ionic-native/badge": "^5.31.1",
     "@ionic-native/calendar": "^5.31.1",
@@ -115,7 +125,7 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "^2.4.6",
+    "@capacitor/cli": "^3.2.5",
     "@ionic/angular-toolkit": "^2.3.3",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.17",
