--- a/package.json
+++ b/package.json
@@ -15,30 +15,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "~9.1.13",
     "@angular/cdk": "8.x",
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/pwa": "^0.900.7",
-    "@angular/router": "~8.2.14",
-    "@angular/service-worker": "~8.2.14",
+    "@angular/common": "~9.1.13",
+    "@angular/core": "~9.1.13",
+    "@angular/forms": "~9.1.13",
+    "@angular/platform-browser": "~9.1.13",
+    "@angular/platform-browser-dynamic": "~9.1.13",
+    "@angular/router": "~9.1.13",
+    "@angular/service-worker": "~9.1.13",
     "@capacitor-community/electron": "^1.3.3",
-    "@capacitor/android": "^2.4.6",
+    "@capacitor/android": "^3.2.5",
     "@capacitor/app": "^1.0.5",
     "@capacitor/camera": "^1.1.2",
     "@capacitor/clipboard": "^1.0.5",
     "@capacitor/core": "^3.2.5",
-    "@capacitor/ios": "^2.4.6",
+    "@capacitor/ios": "^3.2.5",
     "@capacitor/local-notifications": "^1.0.8",
     "@capacitor/network": "^1.0.5",
     "@capacitor/push-notifications": "^1.0.6",
     "@capacitor/share": "^1.0.6",
     "@capacitor/splash-screen": "^1.1.5",
     "@capacitor/status-bar": "^1.0.5",
-    "@cyril-colin/capacitor3-jitsi-meet": "^1.0.0",
     "@ionic-native/app-version": "^5.31.1",
     "@ionic-native/badge": "^5.31.1",
     "@ionic-native/calendar": "^5.31.1",
@@ -65,7 +63,7 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "^1.5.13",
+    "capacitor-jitsi-meet": "^2.0.0-alpha.0",
     "capacitor-share-extension": "0.0.18",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
@@ -102,9 +100,8 @@
     "jetifier": "^1.6.6",
     "minimist": "^1.2.5",
     "ngx-electron": "^2.2.0",
-    "ngx-pinch-zoom": "^2.5.5",
     "ngx-plyr": "^4.0.0",
-    "ngx-quill": "7.3.2",
+    "ngx-quill": "8.1.8",
     "ngx-stripe": "^8.2.0",
     "plyr": "^3.6.4",
     "quill": "^1.3.7",
@@ -112,28 +109,29 @@
     "scriptjs": "^2.5.9",
     "socket.io-client": "^2.4.0",
     "sw-toolbox": "^3.6.0",
+    "tslib": "^1.10.0",
     "underscore": "^1.12.0",
     "xml2js": "^0.4.23",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.29",
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular-devkit/core": "8.3.25",
-    "@angular-devkit/schematics": "8.3.25",
-    "@angular/cli": "8.3.25",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/architect": "~0.901.15",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular-devkit/core": "9.1.15",
+    "@angular-devkit/schematics": "9.1.15",
+    "@angular/cli": "9.1.15",
+    "@angular/compiler": "~9.1.13",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@capacitor/cli": "^3.2.5",
     "@ionic/angular-toolkit": "^2.3.3",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.5.5",
-    "@types/node": "^10.17.54",
+    "@types/node": "^12.11.1",
     "acorn": "^6.4.2",
-    "codelyzer": "^5.2.2",
+    "codelyzer": "^5.1.2",
     "electron": "^9.4.3",
     "faker": "^4.1.0",
     "g": "^2.0.1",
@@ -148,7 +146,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.8.3"
   },
   "description": "An Ionic project",
   "cordova": {
