--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,11 +2,13 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "baseUrl": "./",
-    "module": "esnext"
-  },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+    "baseUrl": "./"
+},
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
