--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,14 +1,32 @@
-platform :ios, '12.1'
+platform :ios, '12.0'
 use_frameworks!
 
-target 'App' do
-  # Add your Pods here
+# workaround to avoid Xcode caching of Pods that requires
+# Product -> Clean Build Folder after new Cordova plugins installed
+# Requires CocoaPods 1.6 or newer
+install! 'cocoapods', :disable_input_output_paths => true
 
-  # Automatic Capacitor Pod dependencies, do not delete
+def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
+  pod 'CapacitorApp', :path => '../../node_modules/@capacitor/app'
+  pod 'CapacitorCamera', :path => '../../node_modules/@capacitor/camera'
+  pod 'CapacitorClipboard', :path => '../../node_modules/@capacitor/clipboard'
+  pod 'CapacitorLocalNotifications', :path => '../../node_modules/@capacitor/local-notifications'
+  pod 'CapacitorNetwork', :path => '../../node_modules/@capacitor/network'
+  pod 'CapacitorPushNotifications', :path => '../../node_modules/@capacitor/push-notifications'
+  pod 'CapacitorShare', :path => '../../node_modules/@capacitor/share'
+  pod 'CapacitorSplashScreen', :path => '../../node_modules/@capacitor/splash-screen'
+  pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
   pod 'CapacitorJitsiMeet', :path => '../../node_modules/capacitor-jitsi-meet'
   pod 'CapacitorShareExtension', :path => '../../node_modules/capacitor-share-extension'
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
-  # Do not delete
+end
+
+target 'App' do
+    capacitor_pods
+    # Add your Pods here
+    pod 'CapacitorJitsiMeet', :path => '../../node_modules/capacitor-jitsi-meet'
+    pod 'CapacitorShareExtension', :path => '../../node_modules/capacitor-share-extension'
+    pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
 end
