--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "^2.0.0-alpha.0",
-    "capacitor-share-extension": "0.0.18",
+    "capacitor-jitsi-meet": "^2.0.0-beta.1",
+    "capacitor-share-extension": "0.0.20",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
     "cordova-plugin-app-version": "^0.1.12",
