upgraded to Angular 10

--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,10 @@
                 "input": "node_modules/plyr/dist/plyr.css"
               }
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "socket.io-client"
+            ]
           },
           "configurations": {
             "production": {
