--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.5",
+    "@angular/animations": "~11.2.14",
     "@angular/cdk": "^9.1.13",
-    "@angular/common": "~10.2.5",
-    "@angular/core": "~10.2.5",
-    "@angular/forms": "~10.2.5",
-    "@angular/platform-browser": "~10.2.5",
-    "@angular/platform-browser-dynamic": "~10.2.5",
-    "@angular/router": "~10.2.5",
-    "@angular/service-worker": "~10.2.5",
+    "@angular/common": "~11.2.14",
+    "@angular/core": "~11.2.14",
+    "@angular/forms": "~11.2.14",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
+    "@angular/service-worker": "~11.2.14",
     "@capacitor-community/electron": "^1.3.3",
     "@capacitor/android": "^3.2.5",
     "@capacitor/app": "^1.0.5",
@@ -114,30 +114,30 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.901.15",
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular-devkit/core": "10.2.3",
-    "@angular-devkit/schematics": "10.2.3",
-    "@angular/cli": "10.2.3",
-    "@angular/compiler": "~10.2.5",
-    "@angular/compiler-cli": "~10.2.5",
-    "@angular/language-service": "~10.2.5",
+    "@angular-devkit/architect": "~0.1102.15",
+    "@angular-devkit/build-angular": "~0.1102.15",
+    "@angular-devkit/core": "11.2.15",
+    "@angular-devkit/schematics": "11.2.15",
+    "@angular/cli": "11.2.15",
+    "@angular/compiler": "~11.2.14",
+    "@angular/compiler-cli": "~11.2.14",
+    "@angular/language-service": "~11.2.14",
     "@capacitor/cli": "^3.2.5",
     "@ionic/angular-toolkit": "^2.3.3",
     "@ionic/lab": "3.1.2",
-    "@types/jasmine": "^2.8.17",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
     "acorn": "^6.4.2",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "electron": "^9.4.3",
     "faker": "^4.1.0",
     "g": "^2.0.1",
     "ionic-mocks": "^1.3.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.6",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
