--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/cdk": "^9.1.13",
-    "@angular/common": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
-    "@angular/service-worker": "~11.2.14",
-    "@capacitor-community/electron": "^1.3.3",
+    "@angular/animations": "~12.2.12",
+    "@angular/cdk": "^12.2.10",
+    "@angular/common": "~12.2.12",
+    "@angular/core": "~12.2.12",
+    "@angular/forms": "~12.2.12",
+    "@angular/platform-browser": "~12.2.12",
+    "@angular/platform-browser-dynamic": "~12.2.12",
+    "@angular/router": "~12.2.12",
+    "@angular/service-worker": "~12.2.12",
+    "@calvinckho/mic-recorder-to-mp3": "^2.2.4-beta.0",
+    "@capacitor-community/electron": "^4.0.3",
     "@capacitor/android": "^3.2.5",
     "@capacitor/app": "^1.0.5",
     "@capacitor/camera": "^1.1.2",
@@ -56,14 +57,15 @@
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "2.2.0",
     "@stripe/stripe-js": "^1.12.1",
-    "@swimlane/ngx-charts": "^12.1.0",
+    "@swimlane/ngx-charts": "^19.1.0",
     "@types/hammerjs": "^2.0.39",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.12.6",
+    "angular-cd-timer": "^1.1.0",
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "2.0.0",
+    "capacitor-jitsi-meet": "^2.0.1",
     "capacitor-share-extension": "0.0.20",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
@@ -78,18 +80,6 @@
     "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-sms-plugin": "^1.0.1",
     "core-js": "^2.6.12",
-    "d3": "^4.10.2",
-    "d3-array": "^1.2.1",
-    "d3-brush": "^1.1.6",
-    "d3-color": "^1.0.3",
-    "d3-force": "^1.1.0",
-    "d3-format": "^1.4.5",
-    "d3-hierarchy": "^1.1.5",
-    "d3-interpolate": "^1.1.5",
-    "d3-scale": "^1.0.6",
-    "d3-selection": "^1.1.0",
-    "d3-shape": "^1.2.0",
-    "d3-time-format": "^2.3.0",
     "electron-push-receiver": "^2.1.3",
     "es6-promise-plugin": "^4.2.2",
     "fix-orientation-capacitor": "^0.1.1",
@@ -100,30 +90,32 @@
     "jetifier": "^1.6.6",
     "minimist": "^1.2.5",
     "ngx-electron": "^2.2.0",
+    "ngx-pinch-zoom": "^2.5.5",
     "ngx-plyr": "^4.0.0",
-    "ngx-quill": "8.1.8",
+    "ngx-quill": "^14.3.0",
     "ngx-stripe": "^8.2.0",
-    "plyr": "^3.6.4",
+    "plyr": "3.6.4",
     "quill": "^1.3.7",
     "rxjs": "^6.6.3",
     "scriptjs": "^2.5.9",
     "socket.io-client": "^2.4.0",
     "sw-toolbox": "^3.6.0",
+    "tslib": "^2.0.0",
     "underscore": "^1.12.0",
     "xml2js": "^0.4.23",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.1102.15",
-    "@angular-devkit/build-angular": "~0.1102.15",
-    "@angular-devkit/core": "11.2.15",
-    "@angular-devkit/schematics": "11.2.15",
-    "@angular/cli": "11.2.15",
-    "@angular/compiler": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
-    "@angular/language-service": "~11.2.14",
+    "@angular-devkit/architect": "^0.1202.12",
+    "@angular-devkit/build-angular": "~12.2.12",
+    "@angular-devkit/core": "12.2.12",
+    "@angular-devkit/schematics": "12.2.12",
+    "@angular/cli": "12.2.12",
+    "@angular/compiler": "~12.2.12",
+    "@angular/compiler-cli": "~12.2.12",
+    "@angular/language-service": "~12.2.12",
     "@capacitor/cli": "^3.2.5",
-    "@ionic/angular-toolkit": "^2.3.3",
+    "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
@@ -137,16 +129,15 @@
     "ionic-mocks": "^1.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.6",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslib": "^2.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.8"
+    "typescript": "~4.3.5"
   },
   "description": "An Ionic project",
   "cordova": {
