perform npm audit and npm update

--- a/package.json
+++ b/package.json
@@ -15,29 +15,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.12",
-    "@angular/cdk": "^12.2.10",
-    "@angular/common": "~12.2.12",
-    "@angular/core": "~12.2.12",
-    "@angular/forms": "~12.2.12",
-    "@angular/platform-browser": "~12.2.12",
-    "@angular/platform-browser-dynamic": "~12.2.12",
-    "@angular/router": "~12.2.12",
-    "@angular/service-worker": "~12.2.12",
+    "@angular/animations": "^12.2.16",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.2.16",
+    "@angular/core": "^12.2.16",
+    "@angular/forms": "^12.2.16",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
+    "@angular/service-worker": "^12.2.16",
     "@calvinckho/mic-recorder-to-mp3": "^2.2.4-beta.0",
-    "@capacitor-community/electron": "^4.0.3",
-    "@capacitor/android": "^3.2.5",
-    "@capacitor/app": "^1.0.5",
-    "@capacitor/camera": "^1.1.2",
-    "@capacitor/clipboard": "^1.0.5",
-    "@capacitor/core": "^3.2.5",
-    "@capacitor/ios": "^3.2.5",
-    "@capacitor/local-notifications": "^1.0.8",
-    "@capacitor/network": "^1.0.5",
-    "@capacitor/push-notifications": "^1.0.6",
-    "@capacitor/share": "^1.0.6",
-    "@capacitor/splash-screen": "^1.1.5",
-    "@capacitor/status-bar": "^1.0.5",
+    "@capacitor-community/electron": "^4.1.0",
+    "@capacitor/android": "^3.4.3",
+    "@capacitor/app": "^1.1.1",
+    "@capacitor/camera": "^1.3.1",
+    "@capacitor/clipboard": "^1.0.8",
+    "@capacitor/core": "^3.4.3",
+    "@capacitor/ios": "^3.4.3",
+    "@capacitor/local-notifications": "^1.1.0",
+    "@capacitor/network": "^1.0.7",
+    "@capacitor/push-notifications": "^1.0.9",
+    "@capacitor/share": "^1.1.2",
+    "@capacitor/splash-screen": "^1.2.2",
+    "@capacitor/status-bar": "^1.0.8",
     "@ionic-native/app-version": "^5.31.1",
     "@ionic-native/badge": "^5.31.1",
     "@ionic-native/calendar": "^5.31.1",
@@ -53,12 +53,12 @@
     "@ionic-native/sms": "^5.31.1",
     "@ionic-native/speech-recognition": "^5.31.1",
     "@ionic-native/splash-screen": "^5.31.1",
-    "@ionic/angular": "^5.5.4",
+    "@ionic/angular": "^5.9.3",
     "@ionic/pwa-elements": "^1.5.2",
     "@ionic/storage": "2.2.0",
-    "@stripe/stripe-js": "^1.12.1",
-    "@swimlane/ngx-charts": "^19.1.0",
-    "@types/hammerjs": "^2.0.39",
+    "@stripe/stripe-js": "^1.24.0",
+    "@swimlane/ngx-charts": "^19.2.0",
+    "@types/hammerjs": "^2.0.41",
     "@types/scriptjs": "0.0.2",
     "ajv": "^6.12.6",
     "angular-cd-timer": "^1.1.0",
@@ -71,14 +71,14 @@
     "compressorjs": "^1.0.7",
     "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-calendar": "^5.1.5",
+    "cordova-plugin-calendar": "^5.1.6",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-speechrecognition": "^1.2.0",
-    "cordova-sms-plugin": "^1.0.1",
+    "cordova-sms-plugin": "^1.0.2",
     "core-js": "^2.6.12",
     "electron-push-receiver": "^2.1.3",
     "es6-promise-plugin": "^4.2.2",
@@ -86,7 +86,7 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "ionic-cache": "^4.1.0",
-    "ionicons": "^5.5.0",
+    "ionicons": "^5.5.4",
     "jetifier": "^1.6.6",
     "minimist": "^1.2.5",
     "ngx-electron": "^2.2.0",
@@ -101,26 +101,26 @@
     "socket.io-client": "^2.4.0",
     "sw-toolbox": "^3.6.0",
     "tslib": "^2.0.0",
-    "underscore": "^1.12.0",
+    "underscore": "^1.13.2",
     "xml2js": "^0.4.23",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1202.12",
-    "@angular-devkit/build-angular": "~12.2.12",
+    "@angular-devkit/architect": "^0.1202.16",
+    "@angular-devkit/build-angular": "^12.2.16",
     "@angular-devkit/core": "12.2.12",
     "@angular-devkit/schematics": "12.2.12",
     "@angular/cli": "12.2.12",
-    "@angular/compiler": "~12.2.12",
-    "@angular/compiler-cli": "~12.2.12",
-    "@angular/language-service": "~12.2.12",
-    "@capacitor/cli": "^3.2.5",
+    "@angular/compiler": "^12.2.16",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/language-service": "^12.2.16",
+    "@capacitor/cli": "^3.4.3",
     "@ionic/angular-toolkit": "^4.0.0",
     "@ionic/lab": "3.1.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
-    "@types/jquery": "^3.5.5",
-    "@types/node": "^12.11.1",
+    "@types/jquery": "^3.5.14",
+    "@types/node": "^12.20.47",
     "acorn": "^6.4.2",
     "codelyzer": "^6.0.0",
     "electron": "^9.4.3",
@@ -129,7 +129,7 @@
     "ionic-mocks": "^1.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "karma": "^6.3.17",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
