--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-browser-dynamic": "^12.2.16",
     "@angular/router": "^12.2.16",
     "@angular/service-worker": "^12.2.16",
+    "@calvinckho/capacitor-contact-picker": "^1.0.2",
     "@calvinckho/mic-recorder-to-mp3": "^2.2.4-beta.0",
-    "@capacitor-community/contacts": "^1.1.3",
     "@capacitor-community/electron": "^4.1.0",
     "@capacitor/android": "^3.4.3",
     "@capacitor/app": "^1.1.1",
@@ -66,7 +66,7 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
-    "capacitor-jitsi-meet": "git+ssh://git@github.com/calvinckho/capacitor-jitsi-meet-premium.git#pip-dev-setcaret",
+    "capacitor-jitsi-meet": "git+ssh://git@github.com/calvinckho/capacitor-jitsi-meet-premium",
     "capacitor-share-extension": "0.0.20",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
