switch app to free Apple Developer settings clean up iOS project, upgrade Capacitor Share Extension usage to 1.0

--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -27,3 +27,13 @@ target 'App' do
     capacitor_pods
     # Add your Pods here
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+  if target.name == 'CapacitorJitsiMeet' || target.name == 'CapacitorJitsiMeet-Plugin'
+    target.build_configurations.each do |config|
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+    end
+  end
+  end
+end
