--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -12,3 +12,13 @@ target 'App' do
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
   # Do not delete
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+  if target.name == 'CapacitorJitsiMeet' || target.name == 'CapacitorJitsiMeet-Plugin'
+    target.build_configurations.each do |config|
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+    end
+  end
+  end
+end
