--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -1,18 +1,20 @@
 ext {
   minSdkVersion = 23
-  compileSdkVersion = 30
-  targetSdkVersion = 30
-  androidxActivityVersion = '1.2.0'
-  androidxAppCompatVersion = '1.2.0'
-  androidxCoordinatorLayoutVersion = '1.1.0'
-  androidxMaterialVersion =  '1.1.0-rc02'
-  androidxExifInterfaceVersion = '1.2.0'
-  firebaseMessagingVersion =  '20.1.2'
-  playServicesLocationVersion =  '17.0.0'
-  androidxCoreVersion =  '1.3.2'
-  androidxFragmentVersion = '1.3.0'
-  junitVersion =  '4.13.1'
-  androidxJunitVersion =  '1.1.2'
-  androidxEspressoCoreVersion =  '3.3.0'
-  cordovaAndroidVersion =  '7.0.0'
+  compileSdkVersion = 32
+  targetSdkVersion = 32
+  androidxActivityVersion = '1.4.0'
+  androidxAppCompatVersion = '1.4.2'
+  androidxCoordinatorLayoutVersion = '1.2.0'
+  androidxMaterialVersion = '1.6.1'
+  androidxExifInterfaceVersion = '1.3.3'
+  firebaseMessagingVersion = '23.0.5'
+  playServicesLocationVersion = '20.0.0'
+  androidxCoreVersion = '1.8.0'
+  androidxFragmentVersion = '1.4.1'
+  junitVersion = '4.13.2'
+  androidxJunitVersion = '1.1.3'
+  androidxEspressoCoreVersion = '3.4.0'
+  cordovaAndroidVersion = '10.1.1'
+  coreSplashScreenVersion = '1.0.0-rc01'
+  androidxWebkitVersion = '1.4.0'
 }
