--- a/ios/App/App/App.entitlements
+++ b/ios/App/App/App.entitlements
@@ -2,17 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>aps-environment</key>
-	<string>development</string>
-	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:app.restvo.com</string>
-	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.restvo.app</string>
+		<string>group.com.restvo.test</string>
 	</array>
 	<key>com.apple.security.device.audio-input</key>
 	<true/>
@@ -30,7 +24,7 @@
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.restvo.app</string>
+		<string>$(AppIdentifierPrefix)com.restvo.test</string>
 	</array>
 </dict>
 </plist>
