--- a/ios/App/ShareExtension/ShareExtension.entitlements
+++ b/ios/App/ShareExtension/ShareExtension.entitlements
@@ -2,15 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:app.restvo.com</string>
-	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.restvo.app</string>
+		<string>group.com.restvo.test</string>
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
