uses Jitsi-meet SDK 6.1.0: - add Android notification icons - turn off pre-join page

--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "angular-progress-bar": "^1.0.11",
     "blob-util": "^2.0.2",
     "call-number": "^1.0.1",
+    "capacitor-jitsi-meet": "^3.0.0",
     "capacitor-share-extension": "git+ssh://git@github.com/calvinckho/capacitor-share-extension.git",
-    "capacitor-jitsi-meet": "git+ssh://git@github.com/calvinckho/capacitor-jitsi-meet-premium.git#capacitor-4",
     "compact-timezone-list": "^1.0.6",
     "compressorjs": "^1.0.7",
     "cordova-plugin-app-version": "^0.1.14",
